ui/less/containers.less
/** @license
 * Shaka Player
 * Copyright 2016 Google LLC
 * SPDX-License-Identifier: Apache-2.0
 */

/* All of the top-level containers into which various visible features go. */

/* A container for the entire video + controls combo.  This is the auto-setup
 * div which we populate. */
.shaka-video-container {
  .overlay-parent();

  /* Without this, the container somehow winds up being a tad taller than it
   * should be (484px vs 480px). */
  display: flex;

  /* Set a special font for material design icons. */
  .shaka-ui-icon {
    font-size: var(--shaka-icon-size-sm);
  }

  /* Set the fonts for all other content. */
  font-family: var(--shaka-font-family);
  font-weight: normal;
  -webkit-font-smoothing: antialiased;

  /* prevent text caret from showing when 'Navigate pages with a text cursor'
   * setting is enabled on chromium-based browsers */
  user-select: none;

  *,
  :after,
  :before {
    box-sizing: revert;
  }

  /* stylelint-disable max-line-length, declaration-block-no-duplicate-properties, unit-no-unknown */
  &.pip-mode {
    background-color: var(--shaka-bg-solid);
    // Old browsers
    width: 100vw;
    height: 100vh;
    // Modern browsers
    width: 100dvw;
    height: 100dvh;
  }
  /* stylelint-enable max-line-length, declaration-block-no-duplicate-properties, unit-no-unknown */
}

/* Each browser has a different prefixed pseudo-class for fullscreened elements.
 * Define the properties of a fullscreened element in a mixin, then apply to
 * each of the browser-specific pseudo-classes.
 * NOTE: These fullscreen pseudo-classes can't be combined with commas into a
 * single delcaration.  Browsers ignore the rest of the list once they hit one
 * pseudo-class they don't support. */
.fullscreen-container() {
  .fill-container();

  background-color: var(--shaka-bg-solid);

  .shaka-text-container,
  .shaka-speech-to-text-container {
    /* In fullscreen mode, the text displayer's font size should be relative to
     * the either window height or width (whichever is smaller), instead of a
     * fixed size. */
    font-size: 4.4vmin;
  }
}
.shaka-video-container:fullscreen { .fullscreen-container(); }

/* The actual video element.  Sits inside .shaka-video-container and gives it a
 * size in non-fullscreen mode.  In fullscreen mode, the sizing relationship
 * flips.  CSS is just great like that.  :-( */
.shaka-video {
  /* At the moment, nothing special is required here.
   * Note that this should NOT be an overlay-child, as its size could dictate
   * the size of the container for some applications. */
}

/* A container for all controls, including the giant buttons, seek bar, etc.
 * Sits inside .shaka-video-container, on top of (Z axis) .shaka-video, and
 * below (Y axis) .shaka-big-buttons-container. */
.shaka-controls-container {
  .overlay-child();

  .hide-when-shaka-controls-disabled();

  /* Without this, the controls container overflows the video container. */
  box-sizing: border-box;

  /* A flex container, to make layout of children easier to reason about. */
  display: flex;

  /* Defines in which direction the children should flow. */
  flex-direction: column;

  /* Pushes the children toward the bottom of the container. */
  justify-content: flex-end;

  /* Centers children horizontally. */
  align-items: center;

  /* By default, do not allow any of our controls to shrink.
   * Specific controls can use .shrinkable() to override. */
  * { .unshrinkable(); }

  /* Position the controls container in front of the text container, so that
   * the text container doesn't interfere with the control buttons. */
  z-index: 1;

  &[casting="true"] {
    /* Hide fullscreen button while casting. */
    .shaka-fullscreen-button {
      .hidden();
    }
  }
}

/* A container for all canvas for LCEVC decoding
 * Sits inside .shaka-video-container, on top of (Z axis) .shaka-video, and
 * below (Y axis) .shaka-big-buttons-container. */
.shaka-canvas-container {
  .overlay-child();

  /* Make sure pointer events can reach the video element in the case of native
   * controls. */
  pointer-events: none;
}

/* A container for VR
 * Sits inside .shaka-video-container, on top of (Z axis) .shaka-video, and
 * below (Y axis) .shaka-big-buttons-container. */
.shaka-vr-canvas-container {
  .overlay-child();

  /* Make sure pointer events can reach the video element in the case of native
   * controls. */
  pointer-events: none;
}

/* Container for controls positioned at the top of the video container:
 * controls button panel. */
.shaka-top-controls {
  width: var(--shaka-controls-w);
  padding: 0;

  position: absolute;
  top: 0;

  /* Position the bottom panel in front of other controls (play button and
   * spinner containers).
   * TODO: A different layout arrangement might be a better solution for this.
   * Need to experiment.
   */
  z-index: 1;
}

/* Container for controls positioned at the bottom of the video container:
 * controls button panel and the seek bar. */
.shaka-bottom-controls {
  width: var(--shaka-controls-w);
  padding: 0;

  /* Position the bottom panel in front of other controls (play button and
   * spinner containers).
   * TODO: A different layout arrangement might be a better solution for this.
   * Need to experiment.
   */
  z-index: 1;
}

.shaka-context-menu {
  button {
    .shaka-current-selection-span {
      display: none;
    }
  }
}
/* ... */

